Fixed z-index issues

--- a/src/features/components/layout/navbar/CategoriesNav.module.scss
+++ b/src/features/components/layout/navbar/CategoriesNav.module.scss
@@ -4,29 +4,29 @@
   font-size: 1.35rem;
   border: 1px solid #003060;
   background-color: #00376e;
-  z-index: 4;
 
   @media screen and (max-width: 47em) {
     display: none;
+  }
+
+  & [class*='container'] {
+    z-index: 1 !important;
+    position: relative;
   }
 
   ul.categories {
     margin: 0;
     display: flex;
     align-items: center;
-    // justify-content: center;
-    // margin-inline: auto;
     gap: 2rem;
-    // margin-inline: auto;
     list-style-type: none;
-    // max-width: fit-content;
     font-family: 'Poppins', sans-serif;
-    // border: 1px solid #ccc;
+    position: relative;
 
     & > li {
       & > a {
         color: rgba(#fff, 0.9);
-        // font-weight: 600;
+        min-width: max-content;
         transition: color 0.15s 0.1s;
         line-height: 0.5;
         position: relative;
