--- a/src/features/components/layout/navbar/Navbar.module.scss
+++ b/src/features/components/layout/navbar/Navbar.module.scss
@@ -1,5 +1,4 @@
 .nav {
-  // width: 100%;
   display: flex;
   justify-content: space-between;
   // justify-content: center;
@@ -11,10 +10,15 @@
 
   left: 0;
   width: 100%;
-  z-index: 22222;
+  z-index: 45;
+  position: relative;
+
+  // & [class*='container'] {
+  //   position: relative;
+  //   z-index: 45;
+  // }
 
   & * {
-    position: relative;
     z-index: 45;
   }
 
